--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -1,3 +1,18 @@
+@mixin image-container {
+  display: block;
+  box-sizing: border-box;
+  background-size: cover;
+  background-clip: content-box;
+  background-position-x: 50%;
+  padding: 4px;
+}
+
+.portfolio-category {
+  color: $white;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
 .row {
   box-sizing: border-box;
   width: 100%;
@@ -31,12 +46,7 @@
 }
 
 .cell {
-  display: block;
-  box-sizing: border-box;
-  background-size: cover;
-  background-clip: content-box;
-  background-position-x: 50%;
-  padding: 4px;
+  @include image-container;
   width: 100%;
 }
 .cell-1, .cell-38 {
